deployment/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rag-insee-data
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rag-insee-data
  template:
    metadata:
      labels:
        app: rag-insee-data
    spec:
      containers:
        - name: api
          image: linogaliana/llm-statbot:latest
          imagePullPolicy: Always
          resources:
            requests:
              memory: "2Gi"
              cpu: "1"
            limits:
              memory: "50Gi"
              cpu: "30"
