deployment/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rag-insee-data
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8501
      protocol: TCP
  selector:
    app: rag-insee-data
